<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAD3D3"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTittle_main"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="20dp"
        android:text="@string/tittle_main"
        android:textAlignment="center"
        android:textColor="#11504A"
        android:textColorHighlight="#009688"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRegistrarPac2"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainTheme_btn"
        android:text="@string/txtbtn_registrar_paciente" />

    <Button
        android:id="@+id/btnRegistrarVisita"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="22dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainTheme_btn"
        android:text="@string/txtbtn_registrar_visita" />

    <TextView
        android:id="@+id/txtDatoPac"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="22dp"
        android:text="@string/txtView_datos_pac"
        android:textColor="#455A64" />

    <Button
        android:id="@+id/btnEnviarCorreo"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainTheme_btn"
        android:text="@string/txtbtn_enviar_correo" />

</LinearLayout>